tests/ui/lint/snapshots/replaceable_with_zero_fill_lisette_struct.snap
---
source: tests/ui/lint/mod.rs
---
  ● Replaceable with zero-fill spread
   ╭─[test.lis:5:11]
 4 │ fn main() -> int {
 5 │   let c = Conf { name: "x", count: 0, on: false, retries: 0 };
   ·           ──┬─
   ·             ╰── has zero-valued fields
 6 │   let on_n = if c.on { 1 } else { 0 }
   ╰────
  help: Replace zero-valued fields with zero-fill spread: `Conf { name: "x", .. }` · code: [lint.replaceable_with_zero_fill]
