tests/ui/lint/snapshots/rest_only_slice_pattern_discard.snap
---
source: tests/ui/lint/mod.rs
---
  ● Ineffective pattern
   ╭─[test.lis:3:7]
 2 │ pub fn test(slice: Slice<int>) {
 3 │   let [..] = slice;
   ·       ──┬─
   ·         ╰── always matches
 4 │ }
   ╰────
  help: Use `let _` instead · code: [lint.rest_only_slice_pattern]
