tests/ui/lint/snapshots/self_assignment.snap
---
source: tests/ui/lint/mod.rs
---
  ▲ Self-assignment
   ╭─[test.lis:4:3]
 3 │   let mut x = 5;
 4 │   x = x;
   ·   ──┬──
   ·     ╰── assigning to itself
 5 │   let _ = x
   ╰────
  help: Correct this assignment · code: [lint.self_assignment]
