tests/ui/lint/snapshots/self_comparison_int_alias_warns.snap
---
source: tests/ui/lint/mod.rs
---
  ▲ Tautological comparison
   ╭─[test.lis:5:11]
 4 │   let n: Id = 3
 5 │   let _ = n == n
   ·           ───┬──
   ·              ╰── comparing to itself
 6 │ }
   ╰────
  help: This condition is always `true`. Did you mean to compare different values? · code: [lint.self_comparison]
