tests/ui/lint/snapshots/self_comparison_less_than.snap
---
source: tests/ui/lint/mod.rs
---
  [warning] Tautological comparison
   ╭─[test.lis:4:11]
 3 │   let x = 5;
 4 │   let _ = x < x
   ·           ──┬──
   ·             ╰── comparing to itself
 5 │ }
   ╰────
  help: This condition is always `false`. Did you mean to compare different values? · code: [lint.self_comparison]
